# patiencepilot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  cspell.json  mkdocs.yml  noxfile.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  settings.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  docs.yml  draft-release.yml  labeler.yml  release-verify.yml  release.yml  scorecard.yml  workflow-lint.yml
docs/: index.md
docs/_scripts/: gen_api_reference.py
docs/project/: changelog.md  contributing.md  development.md  index.md
docs/reference/: cli.md  compatibility.md  configuration.md  index.md  tui.md
docs/stylesheets/: navigation.css
scripts/: check-github-environments.mjs  create_release_pr.py  create_release_tag.py  prepare_release.py  release_preflight.py
src/patiencepilot/: __init__.py  app.py  cards.py  cli.py  engine.py  exceptions.py  game.py  moves.py  notation.py  state.py  tui.py  view.py
src/patiencepilot/solvers/: __init__.py  base.py  dummy.py  registry.py
src/patiencepilot/ui/: __init__.py  cli.py  tui.py
src/patiencepilot/variants/: __init__.py  base.py  klondike.py  registry.py
src/solitaire/: __init__.py  exceptions.py  game.py
tests/: _helpers.py  solver_harness.py  test_app.py  test_cards.py  test_cli.py  test_create_release_pr.py  test_create_release_tag.py  test_game_session.py  test_klondike_engine.py  test_notation.py  test_player_view.py  test_prepare_release.py  test_public_api.py  test_release_preflight.py  test_solver_registry.py  test_solvers.py  test_tui.py  test_variant_registry.py
