[project]
name = "patiencepilot"
version = "0.1.0"
description = "A Solitaire solver in Python."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
maintainers = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
keywords = [
    "artificial-intelligence",
    "card-games",
    "combinatorial-optimization",
    "freecell",
    "game-theory",
    "klondike",
    "patience",
    "python",
    "search-algorithms",
    "solitaire",
    "solver",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/ryancswallace/patiencepilot"
Changelog = "https://github.com/ryancswallace/patiencepilot/blob/main/CHANGELOG.md"
Documentation = "https://ryancswallace.github.io/patiencepilot/"
Issues = "https://github.com/ryancswallace/patiencepilot/issues"
Source = "https://github.com/ryancswallace/patiencepilot"

[dependency-groups]
test = [
    "hypothesis>=6.155.7",
    "pytest-cov>=7.1.0",
]
lint = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]
type = [
    "basedpyright>=1.39.8",
]
docs = [
    "linkchecker>=10.6.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9,<10",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
]
security = [
    "bandit[toml]>=1.9.4",
    "deptry>=0.25.1",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.1",
    "zizmor>=1.26.1",
]
release = [
    "build>=1.5.0",
    "cyclonedx-bom>=7.3.0",
    "twine>=6.2.0",
]
automation = [
    "nox>=2026.4.10",
]
dev = [
    { include-group = "automation" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "release" },
    { include-group = "security" },
    { include-group = "test" },
    { include-group = "type" },
]

[tool.uv]
link-mode = "copy"
required-version = ">=0.11.8,<0.12"

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/docs",
    "/LICENSE",
    "/mkdocs.yml",
    "/noxfile.py",
    "/README.md",
    "/RELEASING.md",
    "/SECURITY.md",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/patiencepilot"]

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
pythonpath = ["src"]
empty_parameter_set_mark = "fail_at_collect"
xfail_strict = true
required_plugins = [
    "pytest-cov>=7.1.0",
]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=patiencepilot",
    "--cov-report=term-missing",
]
filterwarnings = [
    "error",
]
markers = [
    "integration: tests that exercise installed packages or third-party runtime integrations",
    "property: property-based tests powered by Hypothesis",
    "slow: tests that do packaging, subprocess, or otherwise slower work",
    "unit: fast isolated tests for local package behavior",
]
norecursedirs = [
    "*.egg",
    "*.egg-info",
    ".git",
    ".hypothesis",
    ".mypy_cache",
    ".nox",
    ".pyright",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "env",
    "htmlcov",
    "node_modules",
    "reports",
    "site",
    "venv",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["patiencepilot"]

[tool.coverage.paths]
source = [
    "src/patiencepilot",
    "*/site-packages/patiencepilot",
]

[tool.coverage.report]
fail_under = 5  # TODO: change to 95
precision = 2
show_missing = true
skip_empty = true
skip_covered = true

[tool.ruff]
line-length = 120
src = ["src", "tests", "scripts", "docs/_scripts"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PIE", "PT", "RET", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["patiencepilot"]

[tool.ruff.format]
line-ending = "lf"

[tool.basedpyright]
include = ["src", "tests", "scripts", "docs/_scripts", "noxfile.py"]
exclude = [".venv", "build", "dist", "node_modules"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry]
ignore_notebooks = true
known_first_party = ["patiencepilot"]
